it/ls/unifi/resources/ingress.yaml
---
# Source: unifi/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: it-unifi
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unifi
    app.kubernetes.io/version: v7.1.66
    helm.sh/chart: unifi-5.0.0
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - it-unifi.ls.lsst.org
      secretName: unifi-tls
  rules:
    - host: "it-unifi.ls.lsst.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
